--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,11 +3,10 @@ galaxy_info:
   description: "Github: @rhpvorderman"
   company: Leiden University Medical Center
 
-  license: license MIT
+  license: MIT
 
   min_ansible_version: 2.8
 
-  galaxy_tags: 
+  galaxy_tags:
     - xwiki
     - docker
-
