--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -36,5 +36,5 @@ xwiki_backup_cron_day: "*"
 xwiki_backup_cron_weekday: "6"
 xwiki_backup_cron_month: "*"
 xwiki_docker_image_xwiki: "xwiki:lts-postgres-tomcat"
-xwiki_docker_image_postgres: "postgres:latest"
+xwiki_docker_image_postgres: "postgres:9.5"
 xwiki_docker_image_nginx: "nginx:stable"
