--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -38,3 +38,4 @@ xwiki_backup_cron_month: "*"
 xwiki_docker_image_xwiki: "xwiki:lts-postgres-tomcat"
 xwiki_docker_image_postgres: "postgres:9.5"
 xwiki_docker_image_nginx: "nginx:stable"
+xwiki_nginx_client_max_body_size: "10m"
